--- a/index.html
+++ b/index.html
@@ -2,13 +2,31 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <title>CampusNest PG</title>
   <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-  <div id="root"></div>
-  <script src="https://unpkg.com/react@18/umd/react.production.min.js"></script>
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.production.min.js"></script>
-  <script src="app.js"></script>
+  <div class="container">
+    <header>
+      <h1>CampusNest PG</h1>
+      <p>Your trusted home for every student—PG stays made simple, safe, and student-first.</p>
+    </header>
+    <section id="login-section">
+      <h2>Login</h2>
+      <form id="login-form">
+        <input type="text" id="username" placeholder="Username" required />
+        <input type="password" id="password" placeholder="Password" required />
+        <button type="submit">Login</button>
+      </form>
+      <p id="login-message"></p>
+    </section>
+    <section>
+      <h2>Featured PG Listings</h2>
+      <input type="search" id="search" placeholder="Search by name or location...">
+      <div id="pg-list"></div>
+    </section>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
